initial project setup

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-streamlit>=1.30.0
+streamlit>=1.28.0
+plotly>=5.17.0
 pandas>=2.0.0
-plotly>=5.18.0
-python-dotenv>=1.0.0
-openai>=1.10.0
-kaleido>=0.2.1
-numpy>=1.24.0
+groq>=0.4.0
 pytest>=7.4.0
 pytest-cov>=4.1.0
-black>=23.12.0
-flake8>=7.0.0
+pytest-mock>=3.12.0
+black>=23.0.0
+flake8>=6.0.0
+mypy>=1.7.0
