feat(person2-app): Add Streamlit application orchestration
- Implement complete 5-step workflow (upload → problem → visualize → dashboard → export)
- Add dashboard visual generation with professional charts
- Implement KPI summary, business metrics, insights visualization
- Add performance optimizations with caching
- Include harmonization layer converting LLM specs to visualization specs

--- a/.gitignore
+++ b/.gitignore
@@ -117,6 +117,39 @@ dmypy.json
 .vscode/
 .idea/
 
+# Streamlit
+.streamlit/
+.streamlit_cache/
+.streamlit_cache2/
+*.streamlit.app.yaml
+
+# Project specific
+exports/
+__pycache__/
+*.pyc
+.env
+.env.local
+.env.*.local
+
 # OS
 .DS_Store
 Thumbs.db
+
+# Logs
+*.log
+logs/
+
+# Data files (optional - add if you don't want to track large datasets)
+# *.csv
+# *.xlsx
+# *.json
+
+# Cache
+.pytest_cache/
+.mypy_cache/
+.coverage
+
+# Python
+.venv/
+venv/
+env/
